Image loading fixed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
       rel="icon"
       id="favicon"
       type="image/svg+xml"
-      href="./img/car-white.svg"
+      href="/img/car-white.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutóKölcsönzés</title>
